Fix filter collapse frame paddings

--- a/source/static/est.css
+++ b/source/static/est.css
@@ -258,8 +258,8 @@ body, html {
 
 .collapse-frame {
 	background-color:rgb(0, 0, 0, 0.05);
-	border-radius: 25px;
-	padding: 0 5px;
+	border-radius: 10px;
+	padding: 3px;
 }
 
 .answer {
